--- a/Signal/translations/nl.lproj/InfoPlist.strings
+++ b/Signal/translations/nl.lproj/InfoPlist.strings
@@ -2,8 +2,8 @@ NSAppleMusicUsageDescription = "Signal heeft ‘Apple Music’ nodig om mediabij
 NSCameraUsageDescription = "Signal gebruikt je camera om foto's te maken en om video-oproepen mogelijk te maken.";
 NSContactsUsageDescription = "Signal gebruikt je contactenlijst om personen te vinden die je kent. Je contacten worden niet opgeslagen op de server.";
 NSFaceIDUsageDescription = "Signals appvergrendeling maakt gebruik van Face ID.";
-NSLocationWhenInUseUsageDescription = "Signal heeft toegang tot je locatie nodig zodat je je huidige locatie kunt delen.";
-NSMicrophoneUsageDescription = "Signal heeft toestemming nodig om je microfoon te gebruiken, om spraak- en video-oproepen te kunnen maken en om spraakberichten op te kunnen nemen.";
+NSLocationWhenInUseUsageDescription = "Signal heeft toegang tot je locatie nodig om je huidige locatie te kunnen delen.";
+NSMicrophoneUsageDescription = "Signal heeft toegang tot je microfoon nodig om spraak- en video-oproepen te kunnen maken en om spraakberichten te kunnen opnemen.";
 NSPhotoLibraryAddUsageDescription = "Signal zal foto's opslaan naar je fotobibliotheek.";
 NSPhotoLibraryUsageDescription = "Signal laat je kiezen welke foto's uit je fotobibliotheek je wilt verzenden.";
 NSLocalNetworkUsageDescription = "Signal gebruikt het lokale netwerk om je account rechtstreeks naar een nieuwe telefoon over te zetten. Het lokale netwerk zal niet worden gebruikt totdat je zelf een overdracht naar een nieuwe telefoon initieert.";
