--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -1784,17 +1784,17 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخرون رفعوا أيديهم</string>
 			<key>one</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخر رفعَا أديهما</string>
 			<key>two</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخرين رفعوا أيديهم</string>
 			<key>few</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخرون رفعوا أيديهم</string>
 			<key>many</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخرون رفعوا أيديهم</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ و %2$dٍ آخرين رفعوا أيديهم</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
