--- a/Signal/translations/bn.lproj/Localizable.strings
+++ b/Signal/translations/bn.lproj/Localizable.strings
@@ -1037,13 +1037,13 @@
 "CHAT_COLORS_AUTO_TOOLTIP" = "ওয়ালপেপারের রং স্বয়ংক্রিয়ভাবে ম্যাচ করে";
 
 /* Title for context menu action to disable chat list filter (e.g., Filter by Unread) */
-"CHAT_LIST_CLEAR_FILTER_MENU_ACTION" = "Clear Filter";
+"CHAT_LIST_CLEAR_FILTER_MENU_ACTION" = "ফিল্টার খালি করুন";
 
 /* Title for the chat list's default mode. */
 "CHAT_LIST_TITLE_INBOX" = "চ্যাট";
 
 /* Title for context menu action to enable Filter by Unread */
-"CHAT_LIST_UNREAD_FILTER_MENU_ACTION" = "Filter by Unread";
+"CHAT_LIST_UNREAD_FILTER_MENU_ACTION" = "'অপঠিত মেসেজ' অনুযায়ী ফিল্টার করুন";
 
 /* Title for the color & wallpaper settings view. */
 "COLOR_AND_WALLPAPER_SETTINGS_TITLE" = "চ্যাটের রং ও ওয়ালপেপার";
@@ -3818,7 +3818,7 @@
 "LINK_NEW_DEVICE_SUBTITLE" = "নতুন একটি ডিভাইস লিঙ্ক করতে QR কোডটি স্ক্যান করুন।";
 
 /* Navigation title when scanning QR code to add new device. */
-"LINK_NEW_DEVICE_TITLE" = "Link a New Device";
+"LINK_NEW_DEVICE_TITLE" = "একটি নতুন ডিভাইস লিংক করুন";
 
 /* Label for link previews with an unknown host. */
 "LINK_PREVIEW_UNKNOWN_DOMAIN" = "লিঙ্ক পূর্বরূপ";
@@ -5621,13 +5621,13 @@
 "QUOTED_REPLY_TYPE_VIDEO" = "ভিডিও";
 
 /* Label for a button to lower your raised hand in a call. */
-"RAISED_HANDS_LOWER_HAND_BUTTON" = "Lower";
+"RAISED_HANDS_LOWER_HAND_BUTTON" = "নামান";
 
 /* A message appearing on the call view's raised hands toast indicating that another named member has raised their hand. */
-"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ has raised a hand";
+"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ হাত তুলেছেন";
 
 /* A message appearing on the call view's raised hands toast indicating that you raised your own hand. */
-"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "You raised your hand";
+"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "আপনি হাত তুলেছেন";
 
 /* The header used to indicate All reactions to a given message. Embeds {{number of reactions}} */
 "REACTION_DETAIL_ALL_FORMAT" = "সমস্ত · %1$@টি";
