--- a/Signal/translations/da.lproj/PluralAware.stringsdict
+++ b/Signal/translations/da.lproj/PluralAware.stringsdict
@@ -1192,9 +1192,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ og %2$d anden har rakt hånden op</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ og %2$d andre har rakt hånden op</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
