--- a/Signal/translations/ga.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ga.lproj/PluralAware.stringsdict
@@ -1636,15 +1636,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>D&apos;ardaigh %1$@ agus %2$d duine eile lámh</string>
 			<key>two</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>D&apos;ardaigh %1$@ agus %2$d dhuine eile lámh</string>
 			<key>few</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>D&apos;ardaigh %1$@ agus %2$d dhuine eile lámh</string>
 			<key>many</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>D&apos;ardaigh %1$@ agus %2$d nduine eile lámh</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>D&apos;ardaigh %1$@ agus %2$d duine eile lámh</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
