--- a/Signal/translations/it.lproj/PluralAware.stringsdict
+++ b/Signal/translations/it.lproj/PluralAware.stringsdict
@@ -1192,9 +1192,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ e %2$d altra persona hanno alzato la mano</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ e altre %2$d persone hanno alzato la mano</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
