--- a/Signal/translations/ko.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ko.lproj/PluralAware.stringsdict
@@ -1044,7 +1044,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ 님 외 %2$d명이 손을 들었습니다.</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
