--- a/Signal/translations/ro.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ro.lproj/PluralAware.stringsdict
@@ -1340,11 +1340,11 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ și încă %2$d au ridicat mâna</string>
 			<key>few</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ și încă %2$d au ridicat mâna</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ și încă %2$d au ridicat mâna</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
