--- a/Signal/translations/th.lproj/Localizable.strings
+++ b/Signal/translations/th.lproj/Localizable.strings
@@ -1037,13 +1037,13 @@
 "CHAT_COLORS_AUTO_TOOLTIP" = "จับคู่สีกับภาพพื้นหลังโดยอัตโนมัติ";
 
 /* Title for context menu action to disable chat list filter (e.g., Filter by Unread) */
-"CHAT_LIST_CLEAR_FILTER_MENU_ACTION" = "Clear Filter";
+"CHAT_LIST_CLEAR_FILTER_MENU_ACTION" = "ล้างตัวกรอง";
 
 /* Title for the chat list's default mode. */
 "CHAT_LIST_TITLE_INBOX" = "แชท";
 
 /* Title for context menu action to enable Filter by Unread */
-"CHAT_LIST_UNREAD_FILTER_MENU_ACTION" = "Filter by Unread";
+"CHAT_LIST_UNREAD_FILTER_MENU_ACTION" = "กรองตามแชทที่ยังไม่ได้อ่าน";
 
 /* Title for the color & wallpaper settings view. */
 "COLOR_AND_WALLPAPER_SETTINGS_TITLE" = "สีและภาพพื้นหลังแชท";
@@ -3818,7 +3818,7 @@
 "LINK_NEW_DEVICE_SUBTITLE" = "สแกนรหัส QR เพื่อเชื่อมโยงอุปกรณ์เครื่องใหม่";
 
 /* Navigation title when scanning QR code to add new device. */
-"LINK_NEW_DEVICE_TITLE" = "Link a New Device";
+"LINK_NEW_DEVICE_TITLE" = "เชื่อมโยงอุปกรณ์เครื่องใหม่";
 
 /* Label for link previews with an unknown host. */
 "LINK_PREVIEW_UNKNOWN_DOMAIN" = "ภาพตัวอย่างลิงก์";
@@ -5621,13 +5621,13 @@
 "QUOTED_REPLY_TYPE_VIDEO" = "วิดีโอ";
 
 /* Label for a button to lower your raised hand in a call. */
-"RAISED_HANDS_LOWER_HAND_BUTTON" = "Lower";
+"RAISED_HANDS_LOWER_HAND_BUTTON" = "เอามือลง";
 
 /* A message appearing on the call view's raised hands toast indicating that another named member has raised their hand. */
-"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ has raised a hand";
+"RAISED_HANDS_TOAST_SINGLE_HAND_MESSAGE" = "%1$@ ยกมือ";
 
 /* A message appearing on the call view's raised hands toast indicating that you raised your own hand. */
-"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "You raised your hand";
+"RAISED_HANDS_TOAST_YOUR_HAND_MESSAGE" = "คุณยกมือ";
 
 /* The header used to indicate All reactions to a given message. Embeds {{number of reactions}} */
 "REACTION_DETAIL_ALL_FORMAT" = "ทั้งหมด· %1$@";
