--- a/Signal/translations/yue.lproj/PluralAware.stringsdict
+++ b/Signal/translations/yue.lproj/PluralAware.stringsdict
@@ -1044,7 +1044,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%1$@ and %2$d more have raised a hand</string>
+			<string>%1$@ 同另外 %2$d 個人舉咗手</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
