Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• لقد أضفنا تأثير تمويه لتحسين عرض تفاعلات الوجوه المعبّرة خلال مكالمات سيجنال الجماعية.
+• ميزة رفع اليد الجديدة طريقة سهلة لِجذب انتباه شخص ما أو طرح سؤال خلال مكالمة جماعية.
