--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• हमने Signal ग्रुप कॉल के दौरान इमोजी प्रतिक्रियाओं के प्रदर्शन को बेहतर बनाने के लिए एक सूक्ष्म धुंधला प्रभाव जोड़ा। यदि कभी इतनी अधिक प्रतिक्रियाएं हों कि वह धुंधली सी लगने लगे, तो अब वह विषयगत रूप से और भी अधिक उपयुक्त है।
+• यदि आप ग्रुप कॉल के दौरान संवाद करने का कोई दूसरा तरीका खोज रहे हैं, तो अपना हाथ उठाएं। नया रेज हैंड फ़ीचर किसी का ध्यान आकर्षित करने, कोई प्रश्न पूछने या किसी समूह प्रस्ताव के लिए उस स्थिति में सर्वसम्मति से वोट करने का एक सरल तरीका है, जब आपका दोस्त पूछता है "क्या सभी इसके पक्ष में हैं?"
