--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Abbiamo aggiunto un effetto sfumato alle emoji inviate come reazioni durante le chiamate di gruppo su Signal… quando le reazioni saranno tante ti sentirai letteralmente in un turbinio di emozioni!
+• Alza la mano se anche tu hai bisogno di un nuovo modo per attirare l'attenzione durante le chiamate di gruppo. Beh, da ora con la nuova funzione "Alza la mano" puoi farti notare durante le chiamate e prendere parola più velocemente!
