--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Kami menambah kesan kabur untuk meningkatkan tindak balas paparan emoji semasa panggilan kumpulan Signal.
+• Ciri Angkat Tangan ialah cara mudah untuk mendapatkan perhatian seseorang atau bertanya soalan semasa panggilan kumpulan.
