--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Мы добавили эффект лёгкого размытия, чтобы улучшить отображение реакций с помощью эмодзи во время групповых звонков Signal. Если реакций так много, что они начинают застилать глаза, то теперь это ещё более в тему.
+• Поднимите руку, если вам нужен другой способ общения во время групповых звонков. Новая функция «Поднять руку» — это отличный способ привлечь чьё-то внимание, задать вопрос или дружно проголосовать за предложение для всей группы, когда ваш друг спрашивает: «Все за?».
