--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• เราเพิ่มเอฟเฟกต์เบลอแบบพอดีๆ ที่จะช่วยปรับปรุงโฉมเมื่อมีการใช้อีโมจิแสดงความรู้สึกในสายโทรกลุ่มของ Signal
+• ขอแนะนำฟีเจอร์การยกมือ วิธีใหม่ที่จะช่วยให้คุณตั้งคำถามในระหว่างการโทรกลุ่มได้ง่ายดาย (หรือจะใช้เรียกความสนใจของเพื่อน ก่อนประกาศเรื่องสำคัญๆ ก็สะดวกไม่แพ้กัน)
