--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Ми додали ефект легкого розмиття для реакцій з емоджі під час групових викликів у Signal. Якщо реакцій настільки багато, що в очах усе розпливається, тепер цьому є технічне пояснення.
+• Підніміть руку, якщо під час групових викликів вам бракувало засобів комунікації. Нова функція «Підняти руку» допоможе привернути до себе увагу, поставити запитання чи одностайно проголосувати за пропозицію, коли друг питає групу: «Хто за?».
