--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• We hebben een subtiel vervagingseffect toegevoegd om de weergave van emoji-reacties tijdens Signal-groepsoproepen te verbeteren. Als er ooit zoveel reacties zijn dat het wazig voor je ogen wordt, dan is dat nu thematisch nog passender.
+• Steek je hand op als je op zoek bent naar een andere manier om te communiceren tijdens groepsoproepen. De nieuwe functionaliteit van Hand opsteken maakt het gemakkelijk iemands aandacht te vragen, een vraag te stellen of te stemmen voor een groepsvoorstel als je contact vraagt “iedereen voor”?
