--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Wir haben einen subtilen Unschärfe-Effekt hinzugefügt, um die Anzeige von Emoji-Reaktionen während Signal-Gruppenanrufen zu verbessern. Wenn es so viele Reaktionen gibt, dass es sich anfühlt, als würde alles verschwimmen, dann passt das jetzt auch bildlich viel besser.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
