--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• Hemos añadido un sutil efecto de desenfoque para que las reacciones con emojis puedan verse mejor durante las llamadas grupales de Signal. Así, si alguna vez hay tantas reacciones simultáneas que te cuesta enfocarte en una, al menos sabrás que estás en buena compañía.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
