--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Adicionamos um efeito de desfoque sutil para melhorar a exibição das reações de emojis durante as chamadas de grupo no Signal. Temos tantas reações que você pode se confundir e achar que não está vendo bem. Não dá pra dizer que a gente fugiu ao tema com o desfoque 😏
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
