--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Homályos effektust adtunk hozzá, hogy javítsuk a hangulatjeles reakciók megjelenítését a csoportos Signal-hívások során.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
