--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Abbiamo aggiunto un effetto sfumato alle emoji inviate come reazioni durante le chiamate di gruppo su Signal… quando le reazioni saranno tante ti sentirai letteralmente in un turbinio di emozioni!
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
