--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Dodaliśmy subtelny efekt rozmycia, który poprawi wyświetlanie emoji podczas połączeń grupowych Signal. Jeśli więc od ilości emocji mieni Ci się w oczach, to już wiesz, czyja to sprawka.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
