--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Am adăugat un efect subtil de estompare pentru a îmbunătăți afișarea reacțiilor emoji în timpul apelurilor de grup Signal. Dacă există vreodată atât de multe reacții încât totul începe să pară confuz, atunci acest lucru este și mai potrivit din punct de vedere tematic.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
