--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• เราเพิ่มเอฟเฟกต์เบลอแบบพอดีๆ ที่จะช่วยปรับปรุงโฉมเมื่อมีการใช้อีโมจิแสดงความรู้สึกในสายโทรกลุ่มของ Signal
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
