--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Ми додали ефект легкого розмиття для реакцій з емоджі під час групових викликів у Signal. Якщо реакцій настільки багато, що в очах усе розпливається, тепер цьому є технічне пояснення.
+• We fixed a bug that made it impossible to dismiss the menu to raise your hand or react to a group call if you tapped those on those icons while you were waiting for other people to join the call or if you were the last person to hang up. The next time you're alone in a group call, make Madonna proud and express yourself. 
