--- a/Signal/translations/es.lproj/InfoPlist.strings
+++ b/Signal/translations/es.lproj/InfoPlist.strings
@@ -2,7 +2,7 @@ NSAppleMusicUsageDescription = "Signal necesita usar Apple Music para reproducir
 NSCameraUsageDescription = "Signal usa tu cámara para hacer fotos y videollamadas.";
 NSContactsUsageDescription = "Signal usa tu lista de contactos para encontrar personas que ya usan Signal. No guardamos tus contactos en nuestros servidores.";
 NSFaceIDUsageDescription = "Signal usa Face ID para activar el bloqueo de pantalla.";
-NSLocationWhenInUseUsageDescription = "Signal necesita acceso a tu ubicación para que puedas compartir tu ubicación actual.";
+NSLocationWhenInUseUsageDescription = "Signal necesita acceso a tu localización para que puedas compartir tu ubicación actual.";
 NSMicrophoneUsageDescription = "Signal necesita acceso a tu micrófono para hacer y atender llamadas y para grabar mensajes de voz.";
 NSPhotoLibraryAddUsageDescription = "Signal guardará fotos en tu fototeca.";
 NSPhotoLibraryUsageDescription = "Signal te permitirá seleccionar las fotos que desees enviar.";
